[BugFix] LinkedListDeque: addFirst